chore: prepare v1.1.1 jitpack release

--- a/app/jitpack.yml
+++ b/app/jitpack.yml
@@ -1,6 +1,7 @@
 jdk:
   - openjdk17
-build:
-  commands:
-    - ./gradlew clean :SecureGuard:assembleRelease
+
+install:
+  - ./gradlew :SecureGuard:publishToMavenLocal
+
 
