fix: remove jitpack dependency from demo app

--- a/app/jitpack.yml
+++ b/app/jitpack.yml
@@ -1,7 +1,7 @@
 jdk:
   - openjdk17
 
-install:
-  - ./gradlew :SecureGuard:publishToMavenLocal
-
+build:
+  commands:
+    - ./gradlew :SecureGuard:assembleRelease
 
