feat(security): introduce BottomSheet security alert with granular issue display
- Added BottomSheetDialogFragment for security warnings
- Show only relevant detected issues (hooking, network MITM, device integrity)
- Prevent generic alerts from always appearing
- Keep JNI logic unchanged and centralized
- Maintain Play Store–safe soft enforcement mode

--- a/SecureGuard/src/main/cpp/CMakeLists.txt
+++ b/SecureGuard/src/main/cpp/CMakeLists.txt
@@ -3,15 +3,20 @@ cmake_minimum_required(VERSION 3.22.1)
 project(secureguard LANGUAGES C CXX)
 
 # --------------------------------------------------
-# Collect all native source files
+# Collect all native source files (UPDATED)
 # --------------------------------------------------
 file(GLOB_RECURSE SECUREGUARD_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/jni/*.c
         ${CMAKE_CURRENT_SOURCE_DIR}/jni/*.cpp
+
         ${CMAKE_CURRENT_SOURCE_DIR}/core/*.c
         ${CMAKE_CURRENT_SOURCE_DIR}/core/*.cpp
+
         ${CMAKE_CURRENT_SOURCE_DIR}/common/*.c
         ${CMAKE_CURRENT_SOURCE_DIR}/common/*.cpp
+
+        ${CMAKE_CURRENT_SOURCE_DIR}/security/*.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/security/*.cpp
 )
 
 # --------------------------------------------------
@@ -24,7 +29,7 @@ add_library(
 )
 
 # --------------------------------------------------
-# Android log library
+# Android system libraries
 # --------------------------------------------------
 find_library(
         log-lib
@@ -32,7 +37,7 @@ find_library(
 )
 
 # --------------------------------------------------
-# Include directories
+# Include directories (UPDATED)
 # --------------------------------------------------
 target_include_directories(
         secureguard
@@ -41,15 +46,18 @@ target_include_directories(
         ${CMAKE_CURRENT_SOURCE_DIR}/jni
         ${CMAKE_CURRENT_SOURCE_DIR}/core
         ${CMAKE_CURRENT_SOURCE_DIR}/common
+        ${CMAKE_CURRENT_SOURCE_DIR}/security
 )
 
 # --------------------------------------------------
-# Compiler flags (recommended for security libs)
+# Compiler flags (security-focused)
 # --------------------------------------------------
 target_compile_options(secureguard PRIVATE
         -fvisibility=hidden
         -fno-exceptions
         -fno-rtti
+        -fstack-protector-strong
+        -fPIE
 )
 
 # --------------------------------------------------
